--- a/GiftcardSite/app/src/main/AndroidManifest.xml
+++ b/GiftcardSite/app/src/main/AndroidManifest.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.giftcardsite">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
 
     <application
         android:allowBackup="true"
@@ -17,13 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GiftcardSite"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="m">
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".UseCard"
             android:label="@string/title_activity_use_card"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
             <intent-filter>
             <action android:name="android.intent.action.VIEW" />
 
@@ -37,8 +30,7 @@
         <activity
             android:name=".GetCard"
             android:label="@string/title_activity_get_card"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
             <intent-filter>
             <action android:name="android.intent.action.VIEW" />
 
@@ -52,8 +44,7 @@
         <activity
             android:name=".ProductScrollingActivity"
             android:label="@string/title_activity_scrolling"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -67,8 +58,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -78,8 +68,7 @@
         <activity
             android:name=".CardScrollingActivity"
             android:label="@string/title_activity_scrolling_card"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
